--- a/cyanoboard/package.json
+++ b/cyanoboard/package.json
@@ -10,19 +10,31 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@nivo/line": "^0.84.0",
+    "@visx/curve": "^3.3.0",
+    "@visx/group": "^3.3.0",
+    "@visx/marker": "^3.5.0",
+    "@visx/mock-data": "^3.3.0",
+    "@visx/shape": "^3.5.0",
+    "@visx/vendor": "^3.5.0",
+    "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "faker": "^6.6.6",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-resizable-panels": "^2.0.12",
     "react-tooltip": "^5.26.3",
+    "recharts": "^2.12.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
